# ViT-FPGA-TPU

./: README.md
code/code_cpu/: CMakeLists.txt  Makefile  cmake_install.cmake  job.sh  main.cpp  msa.cpp  msa.h  output.txt  parallel_mm.cpp  vit.cpp  vit.h  vit_block.h
code/code_fpga/: CMakeLists.txt  Makefile  cmake_install.cmake  fpga.h  main.cpp  model-checkpoint.pt  msa.cpp  optimizer-checkpoint.pt  parallel_mm.cpp  vit.cpp  vit.h  vit_block.cpp  vit_block.h
code/code_fpga/accel_driver/: CMakeLists.txt  README.md
code/code_fpga/accel_driver/include/: accelerator.h  matrix_utils.h
code/code_fpga/accel_driver/src/: main.cpp
code/code_fpga/fpga/pci_mig_32/: pci_mig.xpr
code/code_fpga/fpga/pci_mig_32/pci_mig.gen/sources_1/bd/pci_mig/: pci_mig.bxml
code/code_fpga/fpga/pci_mig_32/pci_mig.gen/sources_1/bd/pci_mig/hdl/: pci_mig_wrapper.v
code/code_fpga/fpga/pci_mig_32/pci_mig.gen/sources_1/bd/pci_mig/sim/: pci_mig.protoinst
code/code_fpga/fpga/pci_mig_32/pci_mig.gen/sources_1/bd/pci_mig/synth/: pci_mig.v
code/code_fpga/fpga/pci_mig_32/pci_mig.sim/sim_1/behav/xsim/: sc_xtlm_pci_mig_axi_smc_0.mem  simulate.sh  waveform.vcd
code/code_fpga/fpga/pci_mig_32/pci_mig.sim/sim_1/behav/xsim/protoinst_files/: pci_mig.protoinst
code/code_fpga/fpga/pci_mig_32/pci_mig.srcs/constrs_1/new/: const.xdc
code/code_fpga/fpga/pci_mig_32/pci_mig.srcs/sim_1/new/: accelerator_tb.sv
code/code_fpga/fpga/pci_mig_32/pci_mig.srcs/sources_1/bd/pci_mig/: pci_mig.bd  pci_mig.bda
code/code_fpga/fpga/pci_mig_32/pci_mig.srcs/sources_1/bd/pci_mig/ui/: bd_b1062102.ui
code/code_fpga/fpga/pci_mig_32/pci_mig.srcs/sources_1/new/: accelerator.sv
code/code_fpga/fpga/pci_mig_accelerator_1.0/: component.xml
code/code_fpga/fpga/pci_mig_accelerator_1.0/bd/pipeline_mac/ip/pipeline_mac_floating_point_0_0/: pipeline_mac_floating_point_0_0.xci
code/code_fpga/fpga/pci_mig_accelerator_1.0/bd/pipeline_mac/ip/pipeline_mac_floating_point_1_0/: pipeline_mac_floating_point_1_0.xci
code/code_fpga/fpga/pci_mig_accelerator_1.0/bd/pipeline_mac/sim/: pipeline_mac.protoinst
code/code_fpga/fpga/pci_mig_accelerator_1.0/bd/pipeline_mac/ui/: bd_21109f32.ui
code/code_fpga/fpga/pci_mig_accelerator_1.0/hdl/: pci_mig_accelerator_v1_0.v
code/code_fpga/fpga/pci_mig_accelerator_1.0/src/: PE.sv  accelerator_ctl.sv  accelerator_ctl_tb.sv  pci_mig_accelerator_sv.sv  pci_mig_accelerator_v1_0_S00_AXI.sv  systolic_array.sv
code/code_fpga/fpga/pci_mig_accelerator_1.0_32/: component.xml  pci_mig_accelerator_0.xcix  pci_mig_accelerator_0_1.xcix
code/code_fpga/fpga/pci_mig_accelerator_1.0_32/bd/pipeline_mac/: pipeline_mac.bd  pipeline_mac.bda  pipeline_mac.bxml
code/code_fpga/fpga/pci_mig_accelerator_1.0_32/bd/pipeline_mac/ip/pipeline_mac_floating_point_0_0/: pipeline_mac_floating_point_0_0.xci
code/code_fpga/fpga/pci_mig_accelerator_1.0_32/bd/pipeline_mac/ip/pipeline_mac_floating_point_1_0/: pipeline_mac_floating_point_1_0.xci
code/code_fpga/fpga/pci_mig_accelerator_1.0_32/bd/pipeline_mac/sim/: pipeline_mac.v
code/code_fpga/fpga/pci_mig_accelerator_1.0_32/bd/pipeline_mac_2/: pipeline_mac_2.bd  pipeline_mac_2.bda  pipeline_mac_2.bxml
code/code_fpga/fpga/pci_mig_accelerator_1.0_32/bd/pipeline_mac_2/ui/: bd_b8408445.ui
code/code_fpga/fpga/pci_mig_accelerator_1.0_32/hdl/: pci_mig_accelerator_v1_0.v  pci_mig_accelerator_v1_0_M00_AXI.sv  pci_mig_accelerator_v1_0_S00_AXI.sv
code/code_fpga/fpga/pci_mig_accelerator_1.0_32/src/: PE.sv  accelerator_ctl.sv  accelerator_types.sv  pci_mig_accelerator_sv.sv  pci_mig_accelerator_v1_0_M00_AXI.sv  pipeline_mac_2.sv  systolic_array.sv
code/code_fpga/fpga/pci_mig_top/: pci_mig.xpr
code/code_fpga/fpga/pci_mig_top/pci_mig.gen/sources_1/bd/pci_mig/: pci_mig.bda  pci_mig.bxml  pci_mig_ooc.xdc
code/code_fpga/fpga/pci_mig_top/pci_mig.sim/sim_1/behav/xsim/: accelerator_tb_behav.wdb  accelerator_tb_vlog.prj  compile.sh  elaborate.sh
code/code_fpga/fpga/pci_mig_top/pci_mig.srcs/sources_1/bd/pci_mig/: pci_mig.bd
code/code_fpga/fpga/pci_mig_top/pci_mig.srcs/sources_1/new/: accelerator_wrapper.v  led_driver.v
v2.0/: README.md
v2.0/sw/: CMakeLists.txt  README.md
v2.0/sw/include/: accelerator.h  dma_utils.h  matrix_utils.h
v2.0/sw/src/: example.py  main.cpp
(+99 files in other folders)
